Fix style issue on mobile

--- a/app/index/style.scss
+++ b/app/index/style.scss
@@ -314,7 +314,8 @@
     }
 
     #secure-img {
-        max-width: 500px;
+        width: 500px;
+        max-width: 80%;
     }
 
 
